# py-spectrum

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
pyspectrum/: __init__.py  api.py  attributes.py  base_client.py  client.py  consts.py  filters.py  responses.py  template.py  xmlhelp.py
pyspectrum/mixins/: models.py
pyspectrum/templates/: event_search.j2  model_search.j2
