[metadata]
name = pyspectrum
version = 0.1.2
author = John Dowson
description = Python client for DX Spectrum
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnrdowson/py-spectrum
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    httpx
    lxml
    parsimonious
    jinja2

[options.packages.find]
exclude = tests*
